automatically backed up by learn

--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -3,7 +3,7 @@
 <% if @song.released? %>
   <p>
     Released in
-    <strong><%= @song.release_year %></strong>
+  <%= @song.release_year %>
   </p>
 <% end %>
 
