automatically backed up by learn

--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -5,9 +5,8 @@
   <%= @song.release_year %>
 <% end %>
 
-<p>
-  <strong>Genre:</strong>
+Genre:
   <%= @song.genre %>
-</p>
+
 
 <%= link_to 'Edit', edit_song_path(@song) %>
