--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -16,7 +16,7 @@
   </div>
 
   <div class="field<%= ' field_with_errors' if @song.errors[:artist_name].any? %>">
-    <%= label_tag "artist_name", "Category" %>
+    <%= label_tag "artist_name", "Artist Name" %>
     <p>Must be either "Fiction" or "Non-Fiction".</p>
     <%= text_field_tag "artist_name", @song.artist_name %>
     <p>
