--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -21,7 +21,7 @@
   </div>
 
   <div class="field<%= ' field_with_errors' if @song.errors[:release_year].any? %>">
-    <%= label_tag "release_year", "Artist Name" %>
+    <%= label_tag "song_release_year", "Artist Name" %>
     <%= text_field_tag "release_year", @song.release_year.to_s %>
   </div>
 
