--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -22,7 +22,7 @@
 
   <div class="field<%= ' field_with_errors' if @song.errors[:release_year].any? %>">
     <%= label_tag "song_release_year", "Artist Name" %>
-    <%= text_field_tag "release_year", @song.release_year.to_s %>
+    <%= text_field_tag "song_release_year", @song.release_year.to_s %>
   </div>
 
   <%= submit_tag "Update" %>
