--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -10,20 +10,27 @@
       </ul>
     </div>
   <% end %>
-  <div class="field<%= ' field_with_errors' if @song.errors[:title].any? %>">
-    <%= label_tag "song_title", "song_title" %>
-    <%= text_field_tag "song_title", @song.title %>
-  </div>
-
-  <div class="field<%= ' field_with_errors' if @song.errors[:artist_name].any? %>">
-    <%= label_tag "artist_name", "Artist Name" %>
-    <%= text_field_tag "artist_name", @song.artist_name %>
-  </div>
-
-  <div class="field<%= ' field_with_errors' if @song.errors[:release_year].any? %>">
-    <%= label_tag "song_release_year", "Artist Name" %>
-    <%= text_field_tag "song_release_year", @song.release_year.to_s %>
-  </div>
-
-  <%= submit_tag "Update" %>
-<% end %>
+  <div class="field">
+     <%= f.label :title %><br>
+     <%= f.text_field :title %>
+   </div>
+   <div class="field">
+     <%= f.label :released %><br>
+     <%= f.check_box :released %>
+   </div>
+   <div class="field">
+     <%= f.label :release_year %><br>
+     <%= f.number_field :release_year %>
+   </div>
+   <div class="field">
+     <%= f.label :genre %><br>
+     <%= f.text_field :genre %>
+   </div>
+   <div class="field">
+     <%= f.label :artist_name %><br>
+     <%= f.text_field :artist_name %>
+   </div>
+   <div class="actions">
+     <%= f.submit %>
+   </div>
+ <% end %>
