--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -1,8 +1,8 @@
-<h2>Editing "<%= @song.title %>"</h2>
-<%= form_tag song_path(@song), method: "patch" do %>
+<%= form_for(@song) do |f| %>
   <% if @song.errors.any? %>
     <div id="error_explanation">
       <h2>There were some errors:</h2>
+
       <ul>
         <% @song.errors.full_messages.each do |message| %>
           <li><%= message %></li>
