automatically backed up by learn

--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,7 +1,10 @@
 <% @songs.each do |song| %>
-<tr>
-  <td>
-    <%= song.title %>
-  </td>
-</tr>
+<tbody>
+  <tr>
+    <td>
+      <%= song.title %>
+    </td>
+  </tr>
+</tbody>
+
 <% end %>
